<resources>
    <string name="app_name">Inventory App</string>

    <!--ITEM CATEGORY-->
    <string name="item_category_others">Others</string>
    <string name="item_category_toy">Toy</string>
    <string name="item_category_living">Living</string>
    <string name="item_category_fashion">Fashion</string>
    <string name="item_category_school">School</string>
    <string name="item_category_tech">Tech</string>
    <string name="item_category_outdoor">Outdoor</string>
    <string name="item_category_collaboration">Collaboration</string>
    <string name="item_category_jewelry">Jewelry</string>
    <string name="item_category_toddler">Toddler</string>

    <!--Editor Activity-->
    <string name="editor_activity_title_edit_inv">Edit Item</string>
    <string name="editor_activity_title_add_inv">Add an Item</string>

    <string name="editor_item_overview">Item Overview</string>
    <string name="editor_insert_image">Insert Image</string>
    <string name="editor_text_name">Item Name:</string>
    <string name="editor_text_category">Category:</string>
    <string name="editor_edit_name">Insert Item Name</string>
    <string name="editor_inventory_status">Inventory Status</string>
    <string name="editor_text_price">Price:  </string>
    <string name="editor_text_quantity">Quantity:  </string>
    <string name="editor_edit_price">$0.00</string>
    <string name="editor_edit_quantity">0</string>
    <string name="editor_sales_button">Sell the item</string>
    <string name="editor_purchase_button">Order the item</string>
    <string name="money_sign">$</string>

    <!--MENU-->
    <string name="action_view_transactions">View Transactions</string>
    <string name="action_insert_dummy_item">Insert Dummy Item</string>
    <string name="action_delete_all_item">Delete All Items</string>
    <string name="action_save">Save Item</string>
    <string name="action_edit">Edit Item</string>
    <string name="action_delete_item">Delete Item</string>

    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">sold\nout</string>

    <!--Alert Dialogs-->
    <string name="enable_dialog_msg">Do you want to enable editing</string>
    <string name="delete_dialog_msg">Do you want to delete this item</string>
    <string name="delete_all_dialog_msg">Do you want to delete ALL of inventory</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Toast Messages-->
    <string name="delete_successful">The item has been deleted</string>
    <string name="delete_fail">There was an error deleting the item</string>
    <string name="insert_successful">The item was successfully added</string>
    <string name="insert_fail">There was an error adding the item</string>
    <string name="update_successful">The item has been updated</string>
    <string name="update_fail">There was an error updating the item</string>
    <string name="purchase_successful">The order has been placed</string>
    <string name="sales_successful">The item has been sold</string>
</resources>
