<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">
    <TextView
        style="@style/editor_item_title"
        android:text="@string/editor_item_overview"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/editor_item_image"
                style="@style/editor_item_image" />
            <Button
                android:id="@+id/editor_insert_image"
                style="@style/editor_insert_image"
                android:text="@string/editor_insert_image"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/editor_text"
                android:text="@string/editor_text_name"/>
            <EditText
                android:id="@+id/editor_edit_name"
                style="@style/editor_edit_name"
                android:hint="@string/editor_edit_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/editor_text"
                android:text="@string/editor_text_category"/>
            <Spinner
                android:id="@+id/editor_spinner_category"
                style="@style/editor_spinner"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        style="@style/editor_item_title"
        android:text="@string/editor_inventory_status"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/editor_text"
                android:text="@string/editor_text_price"/>
            <EditText
                android:id="@+id/editor_edit_price"
                style="@style/editor_edit_price"
                android:hint="@string/editor_edit_price"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/editor_text"
                android:text="@string/editor_text_quantity"/>
            <EditText
                android:id="@+id/editor_edit_quantity"
                style="@style/editor_edit_quantity"
                android:hint="@string/editor_edit_quantity"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <Button
            android:id="@+id/editor_sale_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/editor_sales_button"/>
        <TextView
            android:id="@+id/editor_sale_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="17sp"
            android:text="@string/editor_text_quantity"/>
        <EditText
            android:id="@+id/editor_sale_quantity"
            style="@style/editor_edit_quantity"
            android:hint="@string/editor_edit_quantity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <Button
            android:id="@+id/editor_purchase_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/editor_purchase_button"/>
        <TextView
            android:id="@+id/editor_purchase_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="17sp"
            android:text="@string/editor_text_quantity"/>
        <EditText
            android:id="@+id/editor_purchase_quantity"
            style="@style/editor_edit_quantity"
            android:hint="@string/editor_edit_quantity"/>
    </LinearLayout>
</LinearLayout>